--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
         "@babel/plugin-proposal-export-default-from": "^7.2.0",
         "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
         "@babel/preset-env": "^7.4.4",
+        "autoprefixer": "^9.7.2",
         "babel-loader": "^8.0.6",
         "core-js": "2",
         "cross-env": "^5.1",
         "css-loader": "^3.2.0",
         "js-cookie": "^2.2.1",
+        "mini-css-extract-plugin": "^0.8.0",
+        "moment": "^2.24.0",
         "uuid": "^3.3.2",
         "velocity-animate": "^1.5.2",
         "vue": "^2.6.10",
