--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@babel/preset-env": "^7.4.4",
         "autoprefixer": "^9.7.2",
         "babel-loader": "^8.0.6",
+        "blueimp-md5": "^2.12.0",
         "core-js": "2",
         "cross-env": "^5.1",
         "css-loader": "^3.2.0",
