--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
     "/dist/js/index.js": "/dist/js/index.js",
-    "/dist/css/nano-ui.css": "/dist/css/nano-ui.css"
+    "/dist/css/pico-ui.css": "/dist/css/pico-ui.css"
 }
