--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "nano-js",
+    "name": "pico-js",
     "version": "0.1.0",
-    "main": "dist/nano-js.esm.js",
+    "main": "dist/pico-js.esm.js",
     "scripts": {
         "build": "webpack --hide-modules --mode=production",
         "watch": "webpack --watch --hide-modules --mode=development"
@@ -12,21 +12,11 @@
         "@babel/plugin-proposal-export-default-from": "^7.2.0",
         "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
         "@babel/preset-env": "^7.4.4",
-        "autoprefixer": "^9.7.2",
         "babel-loader": "^8.0.6",
-        "blueimp-md5": "^2.12.0",
-        "core-js": "2",
         "cross-env": "^5.1",
-        "css-loader": "^3.2.0",
-        "js-cookie": "^2.2.1",
-        "mini-css-extract-plugin": "^0.8.0",
         "moment": "^2.24.0",
         "uuid": "^3.3.2",
-        "vue": "^2.6.10",
         "webpack": "^4.39.1",
         "webpack-cli": "^3.3.9"
-    },
-    "dependencies": {
-        "@babel/polyfill": "^7.4.4"
     }
 }
