--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "@kizmann/pico-js",
-    "version": "0.1.0",
+    "name": "pico-js",
+    "version": "0.1.1",
     "license": "MIT",
     "private": false,
     "author": "Eduard Kizmann <kizmann@protonmail.ch>",
-    "repository": "https://github.com/vankizmann/pico-js",
+    "repository": "https://github.com/vankizmann/pico-lib",
+    "module": "src/index.js",
     "main": "dist/pico-js.esm.js",
     "scripts": {
         "build": "webpack --hide-modules --mode=production",
