--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "private": false,
     "author": "Eduard Kizmann <kizmann@protonmail.ch>",
     "repository": "https://github.com/vankizmann/pico-js",
-    "module": "src/index.js",
-    "main": "dist/pico-js.esm.js",
+    "type": "module",
+    "exports": {
+        "import": "./dist/pico-js.esm.js",
+        "require": "./dist/pico-js.esm.js"
+    },
+    "main": "src/index.js",
     "scripts": {
         "build": "webpack --hide-modules --mode=production",
         "watch": "webpack --watch --hide-modules --mode=development"
