--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
     "name": "@kizmann/pico-js",
-    "version": "0.3.37",
+    "version": "0.4.0",
     "license": "MIT",
+    "type": "module",
     "private": false,
     "author": "Eduard Kizmann <kizmann@protonmail.ch>",
     "repository": "https://github.com/vankizmann/pico-js",
     "main": "src/index.js",
     "unpkg": "dist/pico-js.js",
     "scripts": {
-        "build": "webpack --hide-modules --mode=production",
-        "watch": "webpack --watch --hide-modules --mode=development"
+        "build": "webpack --hide-modules --mode=production --config webpack.config.cjs",
+        "watch": "webpack --watch --hide-modules --mode=development --config webpack.config.cjs"
     },
     "devDependencies": {
         "@babel/core": "^7.4.5",
