--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kizmann/pico-js",
-    "version": "0.5.5",
+    "version": "1.0.0",
     "license": "MIT",
     "type": "module",
     "private": false,
@@ -9,9 +9,14 @@
     "main": "src/index.js",
     "unpkg": "dist/pico-js.js",
     "types": "types/index.d.ts",
+    "files": [
+        "dist/",
+        "src/",
+        "package.json"
+    ],
     "scripts": {
-        "build": "webpack --hide-modules --mode=production --config webpack.config.cjs",
-        "watch": "webpack --watch --hide-modules --mode=development --config webpack.config.cjs"
+        "build": "webpack --mode production --config webpack.config.cjs",
+        "watch": "webpack --watch --mode development --config webpack.config.cjs"
     },
     "devDependencies": {
         "@babel/core": "^7.4.5",
@@ -21,10 +26,23 @@
         "@babel/preset-env": "^7.4.4",
         "babel-loader": "^8.0.6",
         "cross-env": "^5.1",
-        "moment": "^2.24.0",
+        "css-loader": "^3.2.0",
+        "html-webpack-plugin": "^5.0.0",
+        "mini-css-extract-plugin": "^2.0.0",
+        "postcss": "^8.4.31",
+        "postcss-inline-svg": "^5.0.0",
+        "postcss-loader": "^5.0.0",
+        "sass": "^1.87.0",
+        "sass-loader": "^12.0.0",
         "terser-webpack-plugin": "^4.2.3",
         "uuid": "^3.3.2",
-        "webpack": "^4.39.1",
-        "webpack-cli": "^3.3.9"
+        "webpack": "^5.0.0",
+        "webpack-cli": "^4.0.0",
+        "webpack-dev-server": "^4.0.0"
+    },
+    "dependencies": {
+        "docsify": "^4.13.1",
+        "moment": "^2.30.1",
+        "global": "^4.4.0"
     }
 }
