--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "@kizmann/pico-js",
-    "version": "2.0.4",
+    "version": "2.0.5",
     "license": "MIT",
     "type": "module",
     "private": false,
     "author": "Eduard Kizmann <kizmann@protonmail.ch>",
     "repository": "https://github.com/vankizmann/pico-js",
     "main": "./src/index.esm.js",
+    "unpkg": "./dist/pico-js.browser.js",
     "jsnext:main": "./src/index.esm.js",
     "typings": "./types/index.esm.d.ts",
     "imports": {
@@ -42,6 +43,7 @@
         "lodash": "^4.17.23",
         "mini-css-extract-plugin": "^2.0.0",
         "mitata": "^1.0.34",
+        "moment": "^2.30.1",
         "postcss": "^8.4.31",
         "postcss-inline-svg": "^5.0.0",
         "postcss-loader": "^5.0.0",
