--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "include": [
         "src/index.esm.js"
     ],
+    "exclude": [
+        "tests",
+        "dist",
+    ],
     "paths": {
         "#src/*": ["./src/*"]
     }
