--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
     "name": "@kizmann/pico-js",
-    "version": "2.0.8",
+    "version": "2.0.9",
     "license": "MIT",
     "type": "module",
     "private": false,
     "author": "Eduard Kizmann <kizmann@protonmail.ch>",
     "repository": "https://github.com/vankizmann/pico-js",
-    "main": "./src/index.esm.js",
+    "main": "./dist/pico-js.esm.js",
     "unpkg": "./dist/pico-js.browser.js",
-    "jsnext:main": "./src/index.esm.js",
+    "jsnext:main": "./dist/pico-js.esm.js",
     "typings": "./types/index.esm.d.ts",
-    "imports": {
-        "#src/*": "./src/*"
-    },
     "files": [
         "dist/",
         "src/",
@@ -36,6 +33,7 @@
         "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
         "@babel/plugin-transform-runtime": "^7.28.5",
         "@babel/preset-env": "^7.4.4",
+        "@babel/preset-typescript": "^7.28.5",
         "babel-loader": "^8.0.6",
         "cross-env": "^5.1",
         "css-loader": "^3.2.0",
